--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
 	"devDependencies": {
 		"node-fetch": "^2.6.7",
 		"vitepress": "^1.0.0-alpha.4"
+	},
+	"dependencies": {
+		"gray-matter": "^4.0.3"
 	}
 }
