--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/node": "^18.0.3",
 		"node-fetch": "^2.6.7",
 		"vitepress": "^1.0.0-alpha.4"
 	},
