--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
 	"devDependencies": {
 		"@types/node": "^18.0.3",
 		"node-fetch": "^2.6.7",
-		"vitepress": "^1.0.0-alpha.4"
-	},
-	"dependencies": {
-		"gray-matter": "^4.0.3"
+		"vitepress": "^1.0.0-alpha.4",
+		"gray-matter": "^4.0.3",
+		"sharp": "^0.30.7"
 	}
 }
