--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^18.0.3",
-		"node-fetch": "^2.6.7",
-		"vitepress": "^1.0.0-alpha.4",
 		"gray-matter": "^4.0.3",
-		"sharp": "^0.30.7"
+		"node-fetch": "^2.6.7",
+		"sharp": "^0.30.7",
+		"vitepress": "^1.0.0-alpha.5"
 	}
 }
