--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
             - name: Upload artifact ⬆️
               uses: actions/upload-pages-artifact@v1
               with:
-                  path: './dist'
+                  path: './docs/.vitepress/dist'
 
             - name: Deploy to GitHub Pages 🚀
               id: deployment
