--- a/.github/workflows/fetch-release.yml
+++ b/.github/workflows/fetch-release.yml
@@ -1,9 +1,6 @@
-name: Flat
+name: Fetch releases
 
 on:
-    push:
-        branches:
-            - main
     workflow_dispatch:
     schedule:
         - cron: '0 0 * * *'
