--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
             - name: Upload artifact ⬆️
               uses: actions/upload-artifact@v4
               with:
+                  name: 'github-pages'
                   path: './docs/.vitepress/dist'
 
             - name: Deploy to GitHub Pages 🚀
