--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,17 @@ jobs:
                   npm install
                   npm run build
 
+            - name: Validate artifact 📦
+              run: |
+                  if find ./docs/.vitepress/dist -type l | read; then
+                      echo "Error: Artifact contains symlinks" >&2
+                      exit 1
+                  fi
+                  if [ $(du -s ./docs/.vitepress/dist | cut -f1) -gt 10485760 ]; then
+                      echo "Error: Artifact size exceeds 10GB" >&2
+                      exit 1
+                  fi
+
             - name: Upload artifact ⬆️
               uses: actions/upload-artifact@v4
               with:
